--- a/index.html
+++ b/index.html
@@ -13,117 +13,181 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css">
-    <title>ER</title>
+    <title>EasyRecipes</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg shadow">
+    <header>
+        <nav class="navbar navbar-expand-lg shadow">
+            <div class="container">
+                <img src="./fav.png" alt="logo" class="logo">
+                <a href="#" class="navbar-brand brand-name">EasyRecepies</a>
+
+                <div class="navbar-items p-relative">
+                    <form class="d-flex d-flex-row">
+                        <i class="bi bi-search icon"></i>
+                        <input type="text" placeholder="Buscar" class="form-control me-2 p-absolut input"
+                            aria-label="Search">
+                        <button class="btn search" type="submit">Pesquisar</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main>
         <div class="container">
-            <img src="./fav.png" alt="logo" class="logo">
-            <a href="#" class="navbar-brand brand-name">EasyRecepies</a>
-
-            <div class="navbar-items p-relative">
-                <form class="d-flex d-flex-row">
-                    <i class="bi bi-search icon"></i>
-                    <input type="text" placeholder="Buscar" class="form-control me-2 p-absolut input"
-                        aria-label="Search">
-                    <button class="btn search" type="submit">Pesquisar</button>
-                </form>
+            <h1 class="mt-5">Confira as mais famosas do momento</h1>
+            <div id="carouselExample" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./lasanha.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption">
+                            <h5>Lasanha Italiana</h5>
+                            <p>Conheça a receita clássica dell'Italia!</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./risoto.jpeg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption">
+                            <h5>Risoto</h5>
+                            <p>Simples mas delicioso. Perfeito para os dias de preguiça.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./mousse.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption">
+                            <h5>Mousse de Chocolate</h5>
+                            <p>A sobremesa para arrasar no seu jantar.</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </div>
-    </nav>
 
-    <div class="container">
-        <h1 class="mt-5">Confira as mais famosas do momento</h1>
-        <div id="carouselExample" class="carousel slide">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./lasanha.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption">
-                        <h5>Lasanha Italiana</h5>
-                        <p>Conheça a receita clássica dell'Italia!</p>
+        <div class="container-fluid container-sm mt-5">
+            <h1>Notícias do mundo gastronômico</h1>
+            <div class="row" id="row-news">
+                <div class="col-6 col-sm-5">
+                    <div class="card">
+                        <img src="./lasanha.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <a class="h1">Novo restaurante em São Paulo</a>
+                            <p class="card-text">Restaurante na Liberdade tras nova abordagem para a cozinha japonesa.
+                            </p>
+                        </div>
                     </div>
                 </div>
-                <div class="carousel-item">
-                    <img src="./lasanha.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption">
-                        <h5>Risoto</h5>
-                        <p>Simples mas delicioso. Perfeito para os dias de preguiça.</p>
+                <div class="col-6">
+                    <div class="card">
+                        <img src="./lasanha.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <a class="h1">Novo restaurante em São Paulo</a>
+                            <p class="card-text">Restaurante na Liberdade tras nova abordagem para a cozinha japonesa.
+                            </p>
+                        </div>
                     </div>
                 </div>
-                <div class="carousel-item">
-                    <img src="./lasanha.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption">
-                        <h5>Mousse de Chocolate</h5>
-                        <p>A sobremesa para arrasar no seu jantar.</p>
+                <div class="col-6">
+                    <div class="card">
+                        <img src="./lasanha.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <a class="h1">Novo restaurante em São Paulo</a>
+                            <p class="card-text">Restaurante na Liberdade tras nova abordagem para a cozinha japonesa.
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-    </div>
-
-    <div class="container-fluid container-sm mt-5">
-        <div class="row" id="row-news">
-            <div class="col-6 col-sm-5">
-                <div class="card">
-                    <img src="./lasanha.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <a class="h1">Novo restaurante em São Paulo</a>
-                        <p class="card-text">Restaurante na Liberdade tras nova abordagem para a cozinha japonesa.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6">
-                <div class="card">
-                    <img src="./lasanha.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <a class="h1">Novo restaurante em São Paulo</a>
-                        <p class="card-text">Restaurante na Liberdade tras nova abordagem para a cozinha japonesa.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6">
-                <div class="card">
-                    <img src="./lasanha.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <a class="h1">Novo restaurante em São Paulo</a>
-                        <p class="card-text">Restaurante na Liberdade tras nova abordagem para a cozinha japonesa.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6">
-                <div class="card">
-                    <img src="./lasanha.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <a class="h1">Novo restaurante em São Paulo</a>
-                        <p class="card-text">Restaurante na Liberdade tras nova abordagem para a cozinha japonesa.
-                        </p>
+                <div class="col-6">
+                    <div class="card">
+                        <img src="./lasanha.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <a class="h1">Novo restaurante em São Paulo</a>
+                            <p class="card-text">Restaurante na Liberdade tras nova abordagem para a cozinha japonesa.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
+        <div class="container mt-5">
+            <div class="row gy-3" id="row-recepies">
+                <h1>Receitas</h1>
+                <div class="col-12 col-md-4">
+                    <div class="card">
+                        <img src="./bolocenoura.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <a title="Bolo de Cenoura" class="h3">Bolo de Cenoura</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="card">
+                        <img src="./sushi.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <a title="Sushi Clássico" class="h3">Sushi Clássico</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="card">
+                        <img src="./omelete.jpg" class="card-img-top" alt="...">
+                        <div class="card-body pb-2">
+                            <a title="Omelete com cogumelos" class="h3 text-truncate d-block">Omelete com cogumelos</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="card">
+                        <img src="./salgados.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <a title="Salgados de festa" class="h3">Salgados de festa</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="card">
+                        <img src="./caipirinha.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <a title="Caipirinha" class="h3">Caipirinha</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="card">
+                        <img src="./ovodepascoa.jpg" class="card-img-top" alt="...">
+                        <div class="card-body pb-2">
+                            <a title="Ovo de Pascóa Tradicional" class="h3 text-truncate d-block">Ovo de Pascóa
+                                Tradicional</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </main>
     <footer>
         <div class="mt-5 container-fluid" id="footer">
             <div class="container text-center fs-4 pt-5">
-                <i class="bi bi-instagram link-secondary"></i>
-                <i class="bi bi-facebook link-secondary ms-3"></i>
-                <i class="bi bi-twitter link-secondary ms-3"></i>
-                <i class="bi bi-linkedin link-secondary ms-3"></i>
+                <i title="Instagram" class="bi bi-instagram link-secondary"></i>
+                <i title="Facebook" class="bi bi-facebook link-secondary ms-3"></i>
+                <i title="Twitter" class="bi bi-twitter link-secondary ms-3"></i>
+                <i title="Linkedin" class="bi bi-linkedin link-secondary ms-3"></i>
             </div>
             <div class="container-sm d-flex d-flex-row justify-content-center mt-2">
-                <a>&reg;EasyRecepies</a>
-                <p class="ms-4">Contate-nos</p>
+                <p style="color:black">&reg;EasyRecepies</p>
+                <a class="ms-4" href="#">Contate-nos</a>
             </div>
         </div>
     </footer>
