--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./fav.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./imgs/fav.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -20,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-lg shadow">
             <div class="container">
-                <img src="./fav.png" alt="logo" class="logo">
+                <img src="./imgs/fav.png" alt="logo" class="logo">
                 <a href="#" class="navbar-brand brand-name">EasyRecepies</a>
 
                 <div class="navbar-items p-relative">
@@ -41,21 +41,21 @@
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./lasanha.jpg" class="d-block w-100" alt="...">
+                        <img src="./imgs/lasanha.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption">
                             <h5>Lasanha Italiana</h5>
                             <p>Conheça a receita clássica dell'Italia!</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./risoto.jpeg" class="d-block w-100" alt="...">
+                        <img src="./imgs/risoto.jpeg" class="d-block w-100" alt="...">
                         <div class="carousel-caption">
                             <h5>Risoto</h5>
                             <p>Simples mas delicioso. Perfeito para os dias de preguiça.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./mousse.jpg" class="d-block w-100" alt="...">
+                        <img src="./imgs/mousse.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption">
                             <h5>Mousse de Chocolate</h5>
                             <p>A sobremesa para arrasar no seu jantar.</p>
@@ -80,7 +80,7 @@
             <div class="row" id="row-news">
                 <div class="col-6 col-sm-5">
                     <div class="card">
-                        <img src="./lasanha.jpg" class="card-img-top" alt="...">
+                        <img src="./imgs/lasanha.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <a class="h1">Novo restaurante em São Paulo</a>
                             <p class="card-text">Restaurante na Liberdade tras nova abordagem para a cozinha japonesa.
@@ -90,7 +90,7 @@
                 </div>
                 <div class="col-6">
                     <div class="card">
-                        <img src="./lasanha.jpg" class="card-img-top" alt="...">
+                        <img src="./imgs/lasanha.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <a class="h1">Novo restaurante em São Paulo</a>
                             <p class="card-text">Restaurante na Liberdade tras nova abordagem para a cozinha japonesa.
@@ -100,7 +100,7 @@
                 </div>
                 <div class="col-6">
                     <div class="card">
-                        <img src="./lasanha.jpg" class="card-img-top" alt="...">
+                        <img src="./imgs/lasanha.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <a class="h1">Novo restaurante em São Paulo</a>
                             <p class="card-text">Restaurante na Liberdade tras nova abordagem para a cozinha japonesa.
@@ -110,7 +110,7 @@
                 </div>
                 <div class="col-6">
                     <div class="card">
-                        <img src="./lasanha.jpg" class="card-img-top" alt="...">
+                        <img src="./imgs/lasanha.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <a class="h1">Novo restaurante em São Paulo</a>
                             <p class="card-text">Restaurante na Liberdade tras nova abordagem para a cozinha japonesa.
@@ -126,7 +126,7 @@
                 <h1>Receitas</h1>
                 <div class="col-12 col-md-4">
                     <div class="card">
-                        <img src="./bolocenoura.jpg" class="card-img-top" alt="...">
+                        <img src="./imgs/bolocenoura.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <a title="Bolo de Cenoura" class="h3">Bolo de Cenoura</a>
                         </div>
@@ -134,7 +134,7 @@
                 </div>
                 <div class="col-12 col-md-4">
                     <div class="card">
-                        <img src="./sushi.jpg" class="card-img-top" alt="...">
+                        <img src="./imgs/sushi.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <a title="Sushi Clássico" class="h3">Sushi Clássico</a>
                         </div>
@@ -142,7 +142,7 @@
                 </div>
                 <div class="col-12 col-md-4">
                     <div class="card">
-                        <img src="./omelete.jpg" class="card-img-top" alt="...">
+                        <img src="./imgs/omelete.jpg" class="card-img-top" alt="...">
                         <div class="card-body pb-2">
                             <a title="Omelete com cogumelos" class="h3 text-truncate d-block">Omelete com cogumelos</a>
                         </div>
@@ -150,7 +150,7 @@
                 </div>
                 <div class="col-12 col-md-4">
                     <div class="card">
-                        <img src="./salgados.jpg" class="card-img-top" alt="...">
+                        <img src="./imgs/salgados.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <a title="Salgados de festa" class="h3">Salgados de festa</a>
                         </div>
@@ -158,7 +158,7 @@
                 </div>
                 <div class="col-12 col-md-4">
                     <div class="card">
-                        <img src="./caipirinha.jpg" class="card-img-top" alt="...">
+                        <img src="./imgs/caipirinha.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <a title="Caipirinha" class="h3">Caipirinha</a>
                         </div>
@@ -166,7 +166,7 @@
                 </div>
                 <div class="col-12 col-md-4">
                     <div class="card">
-                        <img src="./ovodepascoa.jpg" class="card-img-top" alt="...">
+                        <img src="./imgs/ovodepascoa.jpg" class="card-img-top" alt="...">
                         <div class="card-body pb-2">
                             <a title="Ovo de Pascóa Tradicional" class="h3 text-truncate d-block">Ovo de Pascóa
                                 Tradicional</a>
