fixed up layout on middle section, responsive on 568px

--- a/index.html
+++ b/index.html
@@ -75,46 +75,54 @@
             </div>
         </div>
 
-        <div class="container-fluid container-sm mt-5">
+        <div class="container container-sm mt-5" id="news-section">
             <h1>Notícias do mundo gastronômico</h1>
             <div class="row" id="row-news">
-                <div class="col-6 col-sm-5">
+                <div class="col-12 col-sm-6">
                     <div class="card">
-                        <img src="./imgs/lasanha.jpg" class="card-img-top" alt="...">
+                        <img src="./imgs/res.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
+                            <p class="card-category">Novidades</p>
                             <a class="h1">Novo restaurante em São Paulo</a>
-                            <p class="card-text">Restaurante na Liberdade tras nova abordagem para a cozinha japonesa.
+                            <p class="card-text mb-1">Restaurante na Liberdade tras nova abordagem para a cozinha
+                                japonesa.</p>
+                            <p class="card-text desc mb-1">Comandado pela chef Marcela, o estabelecimento é uma
+                                combinação de culinária e arte, de clássico e novidades, oferecendo um tipo de
+                                experiência gastronômica ainda não vista em São Paulo.
+                            </p>
+                            <p class="card-text d-none d-md-block p-0">Por <span>Marcos Megoni</span>
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
-                    <div class="card">
-                        <img src="./imgs/lasanha.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <a class="h1">Novo restaurante em São Paulo</a>
-                            <p class="card-text">Restaurante na Liberdade tras nova abordagem para a cozinha japonesa.
-                            </p>
+                <div class="col-sm-5">
+                    <div class="row" id="second-row">
+                        <div class="col-6 col-sm-12">
+                            <div class="card">
+                                <img src="./imgs/min.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-category mb-1">Saúde</p>
+                                    <a class="h1">MS atualiza leis sobre serviços alimentícios</a>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col-6">
-                    <div class="card">
-                        <img src="./imgs/lasanha.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <a class="h1">Novo restaurante em São Paulo</a>
-                            <p class="card-text">Restaurante na Liberdade tras nova abordagem para a cozinha japonesa.
-                            </p>
+                        <div class="col-6 col-sm-12">
+                            <div class="card">
+                                <img src="./imgs/carne.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-category mb-1">Escândalo</p>
+                                    <a class="h1">Restaurante serve carne com vermes</a>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col-6">
-                    <div class="card">
-                        <img src="./imgs/lasanha.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <a class="h1">Novo restaurante em São Paulo</a>
-                            <p class="card-text">Restaurante na Liberdade tras nova abordagem para a cozinha japonesa.
-                            </p>
+                        <div class="col-12">
+                            <div class="card">
+                                <img src="./imgs/econ.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-category mb-1">Negócios</p>
+                                    <a class="h1">Brasileiros começam a frequentar mais restaurantes</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
