readded news section, fixed most responsivity issues

--- a/index.html
+++ b/index.html
@@ -79,6 +79,55 @@
         </div>
 
         <div class="container mt-5">
+            <div class="row" id="main-news">
+                <div class=" col-12 col-lg-6">
+                    <div class="card" id="main">
+                        <img src="./imgs/econ.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h6 class="card-subtitle mb-2">Economia</h6>
+                            <a title="main news" class="h3">Mercado de restaurantes se aqueceu no último ano</a>
+                            <p class="card-text mt-1">Novos dados do IBGE demonstram um aumento da atividade econômica
+                                no setor. Brasileiros começam a frequentar restaurantes com maior frequência, em
+                                especial datas comemorativas.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4">
+                    <div class="row" id="side-news">
+                        <div class="col-4 col-lg-12">
+                            <div class="card">
+                                <img src="./imgs/res.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h6 class="card-subtitle mb-1">Tendências</h6>
+                                    <a title="main news" class="h3">Novo restaurante faz sucesso nas redes</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4 col-lg-12">
+                            <div class="card">
+                                <img src="./imgs/min.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h6 class="card-subtitle mb-1">Saúde</h6>
+                                    <a title="main news" class="h3">Mudanças em protocolos da Anvisa</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4 col-lg-12">
+                            <div class="card">
+                                <img src="./imgs/carne.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h6 class="card-subtitle mb-1">Polêmica</h6>
+                                    <a title="main news" class="h3">Escândalo de carne vencida choca</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container mt-5">
             <div class="row gy-3" id="row-recepies">
                 <h1>Receitas</h1>
                 <div class="col-12 col-md-4">
